Fixed stretching image bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,11 +45,9 @@ div#specimen{
 }
 
 div#specimen img{
-    max-height: 100%;
-    min-height: 100%;
-
-    max-width: 100%;
-
+	height: 100%;
+	width: 100%;
+	object-fit: contain;
     padding-bottom: 140px;
     margin: auto;
 }
